strict-iterators: Don't warn when comparing against an iterator member var

It won't detach the container
BUG: 404328